frontend-v1-cluster-5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-food
  namespace: food-delivery-1
  labels:
    razee/watch-resource: detail
spec:
  selector:
    matchLabels:
      name: example-food
  replicas: 1
  template:
    metadata:
      labels:
        name: example-food
    spec:
      containers:
        - image: anthonyamanse/example-food-frontend:1.0.ddc
          name: example-food
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: example-food
  namespace: food-delivery-1
  labels:
    razee/watch-resource: detail
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    name: example-food
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: food-route-cluster-5
  namespace: food-delivery-1
  labels:
    razee/watch-resource: detail
spec:
  host: food-route.satellite-cluster-5-22bfd3cd491bdeb5a0f661fb1e2b0c44-0000.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: example-food
  port:
    targetPort: 8090
